fixed some layout issues with moving everything into the application.html and application.css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -80,10 +80,6 @@
    text-align: center;
  }
 
- .task-list{
-   background-color: purple;
- }
-
  .footer {
    background-color: violet;
    grid-area: footer;
